Configure PMD error prone rule set. Include PMD performance and security rule sets. Fix PMD violations.